@@ -14,8 +14,8 @@ fi
 
 sudo kill ${TARGET_PID}
 
-nohup java -Xmx512m \
-        --add-opens java.base/java.lang=ALL-UNNAMED \
+nohup java -Xms256m -Xmx512m \
+        -XX:+HeapDumpOnOutOfMemoryError \
         -Dserver.port=${TARGET_PORT} \
         -Dcom.sun.management.jmxremote=true \
         -Djava.rmi.server.hostname=3.38.58.4 \
@@ -25,12 +25,13 @@ nohup java -Xmx512m \
         -Dcom.sun.management.jmxremote.access.file=/home/ubuntu/zips/scripts/jmx/jmx.access \
         -Dcom.sun.management.jmxremote.ssl=false \
         -Dcom.sun.management.jmxremote.local.only=false \
-        -javaagent:${SCOUTER_AGENT_DIR}/scouter.agent.jar \
-        -Dscouter.config=${SCOUTER_AGENT_DIR}/conf/scouter.conf \
         -Duser.timezone=Asia/Seoul \
         -Dspring.profiles.active=dev \
         -jar build/libs/spinlog-0.0.1-SNAPSHOT.jar \
         >> /home/ubuntu/logs/was_out.log 2> /home/ubuntu/logs/was_err.log < /dev/null &
 
+pid=$!
 
-echo "finish updating WAS version"
+echo $pid | sudo tee /sys/fs/cgroup/example/tasks/cgroup.procs
+
+echo "Program is running with PID $pid and has been added to cgroup 'tasks'"
